pisshoff-server/src/command/snapshots/pisshoff_server__command__uname__test__-a.snap
---
source: pisshoff-server/src/command/uname.rs
expression: output
---
Linux cd5079c0d642 5.15.49 #1 SMP PREEMPT Tue Sep 13 07:51:32 UTC 2022 x86_64 GNU/Linux

