pisshoff-server/src/command/snapshots/pisshoff_server__command__uname__test__-sn --fake.snap
---
source: pisshoff-server/src/command/uname.rs
expression: output
---
uname: unrecognized option '--fake'
Try 'uname --help' for more information.

