pisshoff-server/src/command/snapshots/pisshoff_server__command__uname__test__-sn -z.snap
---
source: pisshoff-server/src/command/uname.rs
expression: output
---
uname: invalid option -- 'z'
Try 'uname --help' for more information.

