pisshoff-server/src/command/snapshots/pisshoff_server__command__uname__test__-sn oper.snap
---
source: pisshoff-server/src/command/uname.rs
expression: output
---
uname: extra operand 'oper'
Try 'uname --help' for more information.

